# arrm

./: .gitmodules  CMakeLists.txt  MoBL_ARMS_module2_4_onemuscle_afferent.osim  MoBL_ARMS_module2_4_onemuscle_afferent_no_string.osim  MoBL_ARMS_module2_4_onemuscle_afferent_no_string_display.osim  draw_forces_2.py  miind_and_body_example.py  setup.py  vcpkg.json
.github/workflows/: build.yml
PyARRM/: CMakeLists.txt  arrm.py  sim.i  sim_wrap.cxx
RunARRM/: CMakeLists.txt  arm.cpp
arrmlib/: CMakeLists.txt  ConstraintRod.cpp  ConstraintRod.h  NeuralController.cpp  NeuralController.h  Sim.cpp  Sim.h
